--- a/coding/css/css.css
+++ b/coding/css/css.css
@@ -54,35 +54,72 @@ a, button {
     float: left;
 }
 
+a:hover{
+    color:#666;
+}
+div:hover{
+    color:#666;
+}
 /*home界面*/
 nav{
     width: 100%;
     height: 100px;
     line-height: 100px;
     padding: 0 20px;
-    font-size: 32px;
-    background-image: linear-gradient(
-    135deg,
-    pink 25%,
-    transparent 25%,
-    transparent 50%,
-    pink 50%,
-    pink 75%,
-    transparent 75%
-    );
-    background-size: 50px 50px;
-    animation: move 1s linear infinite;
+    font-size: 0.32rem;
+    color:#fff;
+    /*渐变效果*/
+    background-image: radial-gradient(700px at 50% 100%,skyblue,yellow,pink,skyblue);
+
+
+    /*进度条效果*/
+    /*background-image: linear-gradient(*/
+    /*135deg,*/
+    /*pink 25%,*/
+    /*transparent 25%,*/
+    /*transparent 50%,*/
+    /*pink 50%,*/
+    /*pink 75%,*/
+    /*transparent 75%*/
+    /*);*/
+    /*background-size: 50px 50px;*/
+    /*animation: move 1s linear infinite;*/
 }
-@keyframes move {
-    from {}
-    to {
-        background-position: 100px 0;
+/*@keyframes move {*/
+    /*from {}*/
+    /*to {*/
+        /*background-position: 100px 0;*/
+    /*}*/
+/*}*/
+@media (max-width: 768px) {
+    nav .one-line {
+        width: 100%;
+        height: 50px;
+        line-height: 50px;
+        /*background-color:red;*/
+        text-align: center;
     }
+    nav .two-line{
+        width: 100%;
+        height: 50px;
+        line-height: 50px;
+        /*background-color:green;*/
+        text-align: center;
+        overflow: hidden;
+    }
+    nav .two-line ul{
+        width: 100%;
+        /*margin: 0 auto;*/
+        margin-left: -50%;
+        transform: translate(50%,0);
+    }
+    nav .two-line li a{
+        padding: 0px 10px;
+        font-size: 0.2rem;
+    }
+
 }
 
-/*nav ul{*/
-    /*margin: 0 auto;*/
-/*}*/
 nav li{
     float: left;
     text-align: center;
@@ -93,8 +130,9 @@ nav li:nth-child(3){
 nav li a{
     display: block;
     padding: 0px 20px;
-    font-size: 22px;
-    color: red;
+    font-size: 0.22rem;
+    /*color: #666;*/
+    color:#fff;
 }
 
 .photo{
@@ -119,31 +157,31 @@ nav li a{
     width: 250px;
     height: 250px;
     padding: 5px;
-    /*margin-top: 50px;*/
 }
 .incite{
     width: 100%;
-    /*background: red;*/
     margin-top: 330px;
 }
 .incite p{
-    font-size: 30px;
+    font-size: 0.25rem;
     text-align: center;
 }
 
 
-
-
-
-
 /*案例界面*/
+nav.banner{
+    width: 118%;
+}
  .wrap {
     width: 1200px;
+     /*width: 100%;*/
     margin: 10px auto;
+     /*overflow: hidden;*/
 }
 
 .slide {
-    height: 500px;
+    /*height: 500px;*/
+    height: 400px;
     position: relative;
 }
 
@@ -151,6 +189,7 @@ nav li a{
     position: absolute;
     left: 200px;
     top: 0;
+    height: 100%;
 }
 
 .slide li img {
@@ -160,36 +199,27 @@ nav li a{
 .slide li a{
     position: relative;
     display: block;
+    /*height: 100%;*/
 }
 .slide li a p{
-    width: 300px;
+    /*display: none;*/
+    width: 100%;
     height: 80px;
-    line-height: 80px;
-    /*overflow: hidden;*/
     text-align: center;
     position: absolute;
-    left: 50%;
     top:50%;
-    margin-left: -150px;
     margin-top: -40px;
-    font-size: 20px;
     color: blue;
-    opacity: 0.5;
+    font-weight: 700;
+    opacity: 0.3;
 }
 
-.slide li:hover p{
-     opacity: 1;
-     font-size: 45px;
- }
-
 .arrow {
-    /*opacity: 0.7;*/
     opacity: 1;
 }
 
 .prev, .next {
     width: 76px;
-    /*height: 100%;*/
     height: 112px;
     position: absolute;
     top: 50%;
@@ -206,36 +236,42 @@ nav li a{
 
 /*联系我contactMe界面*/
 .contactMe-main{
-    margin: 0 auto;
+    margin: 50px auto;
     text-align: center;
     font-family: "微软雅黑";
-    margin-top: 50px;
 }
 .contactMe-main h1{
     color: white;
     font-weight: normal;
-    font-size: 30px;
+    font-size: 0.2rem;
 }
 .contactMe-main .info{
     margin: 0 auto;
-    width: 60%;
+    width: 80%;
 }
 .contactMe-main .info .name{
     width: 100%;
     height: 40px;
     line-height: 40px;
     margin-top: 10px;
-    font-size: 20px;
+    font-size: 0.16rem;
     color: white;
     position: relative;
     background: #ccc;
 }
+
 .contactMe-main .info .name label{
     display: block;
     width: 100%;
     background: #01d3aa;
     position: absolute;
     z-index: 10;
+    /*兼容谷歌、火狐、欧朋、ie浏览器，333毫秒改变状态，*/
+    -webkit-transition: all 333ms ease-in-out;
+    -moz-transition: all 333ms ease-in-out;
+    -o-transition: all 333ms ease-in-out;
+    -ms-transition: all 333ms ease-in-out;
+    transition: all 333ms ease-in-out;
 }
 .contactMe-main .info .name p{
     position: absolute;
@@ -253,6 +289,8 @@ nav li a{
     width: 20%;
 }
 
-
+.contactMe-main .info .name:nth-child(4):hover label{
+    width: 30%;
+}
 
 
